# georgia_dtc_ops_team_chiron_mrsd

./: .gitignore  .gitmodules  GIMBAL_TELEOP_README.md  README.md  VLM_TEST_README.md  bbox_methods.py  gimbal_pitch_test.py  package-lock.json  setup_ubuntu.sh  test_streamer.py  test_topic.py  test_vlm.py  test_vlm_gpu.py  todo.txt
2025-05-07_06-04-01/: metadata.yaml
AirStack/: docker-compose.yaml
AirStack_GCS/: docker-compose.yaml
airstack/: MAVLINK_PROXY_README.md  mavlink_proxy.py  run_mavlink_proxy.sh
airstack/ros_ws/src/autonomy/0_interface/mavros_interface/: package.xml  px4_config.yaml  px4_pluginlists.yaml
airstack/ros_ws/src/autonomy/0_interface/mavros_interface/launch/: px4.launch
airstack/ros_ws/src/behavior_governor/: INTERFACE.md  README.md  USAGE_GUIDE.md  package.xml  px_4_mavros_takeoff_testing_manual_benc->real.md
airstack/ros_ws/src/behavior_governor/config/: foxglove_bridge.yaml  foxglove_panels.json
airstack/ros_ws/src/behavior_governor/launch/: behavior_system.launch.py  foxglove_bridge.launch.py
airstack/ros_ws/src/behavior_governor/scripts/: Corridor Planner Node  example_behavior.py  foxglove_bridge.py  ladn_tester.py  simple_takeoff_teester.py  takeoff_tester.py  waypoint_mission_example.py
airstack/ros_ws/src/behavior_governor/src/: behavior_governor.cpp
airstack/ros_ws/src/behavior_governor/srv/: PushWaypoints.srv
airstack/ros_ws/src/behavior_tree_system/behavior_executive/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml
airstack/ros_ws/src/behavior_tree_system/behavior_executive/include/behavior_executive/: behavior_executive.hpp  mavros_adapter.hpp  mavros_adapter_interface.hpp  transition_logger.hpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/include/behavior_executive/action_handlers/: action_handler_interface.hpp  geofence_mapping_handler.hpp  navigate_to_waypoint_handler.hpp  search_handler.hpp  survey_handler.hpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/include/behavior_executive/mission_planning/: geometry_utils.hpp  waypoint_generator.hpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/src/: behavior_executive.cpp  mavros_adapter.cpp  transition_logger.cpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/src/action_handlers/: geofence_mapping_handler.cpp  navigate_to_waypoint_handler.cpp  search_handler.cpp  survey_handler.cpp
airstack/ros_ws/src/behavior_tree_system/behavior_executive/src/mission_planning/: geometry_utils.cpp  waypoint_generator.cpp
airstack/ros_ws/src/burst_recorder/: burst_recorder_node.py  package.xml  setup.cfg  setup.py
airstack/ros_ws/src/burst_recorder/burst_recorder/: burst_recorder_node.py  burst_recorder_node_backup.py
airstack/ros_ws/src/dell_publisher/: README.md  package.xml  setup.cfg  setup.py
airstack/ros_ws/src/dell_publisher/dell_publisher/: __init__.py  rostopic_publisher.py  rostopic_publisher.py.backup
airstack/ros_ws/src/dell_publisher/launch/: rostopic_publisher.launch.py
airstack/ros_ws/src/dell_publisher/resource/: dell_publisher
airstack/ros_ws/src/dell_publisher/test/: test_copyright.py
airstack/ros_ws/src/gimbal_control/: CMakeLists.txt.backup  package.xml
airstack/ros_ws/src/gimbal_control/include/: autopilot_interface.h  gimbal_protocol.h  gimbal_protocol_v2.h  payloadSdkInterface.h  payloadsdk.h  serial_port.h  sys_time.h
airstack/ros_ws/src/gimbal_control/include/mavlink/v2.0/ardupilotmega/: ardupilotmega.h  version.h
airstack/ros_ws/src/gimbal_control/src/: gimbal_angle_control_node.cpp  gimbal_control_node.cpp  gimbal_status_node.cpp
airstack/ros_ws/src/mcap_receiver/: README.md  TROUBLESHOOTING.md  USER_MANUAL.md  package.xml  setup.cfg  setup.py  test_installation.sh
airstack/ros_ws/src/mcap_receiver/launch/: mcap_bridge.launch.py
airstack/ros_ws/src/mcap_receiver/mcap_receiver/: mcap_receiver_node.py  mcap_to_rostopic_replayer.py  mcap_to_udp_bridge.py  rosbag_to_udp_bridge.py  simple_mcap_processor.py
airstack/ros_ws/src/mcap_receiver/scripts/: mcap_sync.sh  mcap_watcher.sh  simple_main_loop.sh
airstack/ros_ws/src/robot_bringup/: package.xml
airstack/ros_ws/src/robot_bringup/launch/: domain_bridge_70_to_100.launch.xml  robot.launch.xml  robot.launch.xml.full  robot_backup.launch.xml
airstack/ros_ws/src/robot_bringup/params/: domain_bridge.yaml  domain_bridge_70_to_100.yaml
airstack/ros_ws/src/rtsp_forwarder/: package.xml  setup.py
airstack/ros_ws/src/rtsp_forwarder/launch/: rtsp_forwarder.launch.py
airstack/ros_ws/src/rtsp_forwarder/resource/: rtsp_forwarder
airstack/ros_ws/src/rtsp_forwarder/rtsp_forwarder/: __init__.py  rtsp_forwarder_node.py
airstack/ros_ws/src/rtsp_new_streamer/: package.xml
airstack/ros_ws/src/rtsp_new_streamer/config/: config.yaml
airstack/ros_ws/src/rtsp_new_streamer/launch/: rtsp_streamer.launch.py
airstack/ros_ws/src/rtsp_new_streamer/src/: rtsp_streamer_node.cpp
airstack/ros_ws/src/tak_bridge/: package.xml  setup.py
airstack/ros_ws/src/tak_bridge/tak_bridge/: __init__.py  navsatfix_to_wintak.py
airstack/ros_ws/src/vision_gps_estimator/: DEPLOYMENT_NOTES.md  README.md  README_CENTER_PIXEL.md  USAGE_GUIDE.md  activate_env.sh  environment.yml  package.xml  record.sh  setup.py
airstack/ros_ws/src/vision_gps_estimator/config/: center_pixel_params.yaml  params.yaml
airstack/ros_ws/src/vision_gps_estimator/launch/: center_pixel_gps.launch.py  vision_gps_estimator.launch.py
airstack/ros_ws/src/vision_gps_estimator/scripts/: test_center_pixel_node.py  validate_pipeline.py
airstack/ros_ws/src/vision_gps_estimator/vision_gps_estimator/: __init__.py  center_pixel_gps_node.py  gps_manager.py  integrated_node.py  simple_gps_publisher.py  simple_yolo_tester.py  streaming.py  yolo_detector.py
obstacle_avoidance/: compile.sh  main.cpp  path_planner
old/humanflow/ros2_ghadron_gimbal/src/pose_estimator/: package.xml  setup.py
operator/: README.md  domain_bridge_operator.yaml  (+1 more)
operator/ros_ws/src/gimbal_teleop/: README.md  package.xml
operator/ros_ws/src/gimbal_teleop/src/: gimbal_teleop_node.cpp
(+238 files in other folders)
