<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcap_receiver</name>
  <version>0.0.1</version>
  <description>MCAP file receiver and processor for remote telemetry via radio</description>
  <maintainer email="team@dtc.com">DTC Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dtc_network_msgs</depend>
  
  <exec_depend>python3-mcap</exec_depend>
  <exec_depend>python3-mcap-ros2-support</exec_depend>
  <exec_depend>rsync</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
