<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Robot bringup for unified AirStack container</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>domain_bridge</exec_depend>
</package>
