<?xml version="1.0"?>
<package format="3">
  <name>rtsp_forwarder</name>
  <version>0.1.0</version>
  <description>Simple TCP proxy to forward RTSP stream to operators</description>
  <maintainer email="ops@example.com">Ops</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
