<?xml version="1.0"?>
<package format="3">
  <name>tak_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 node to publish NavSatFix stream to WinTAK as CoT</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
