<?xml version="1.0"?>
<package format="2">
  <name>gimbal_teleop</name>
  <version>0.0.1</version>
  <description>Teleoperation node for gimbal control using Xbox controller</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
</package>
