<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_estimator</name>
  <version>0.0.0</version>
  <description>Human pose detection package using deep learning model</description>
  <maintainer email="yiwu2@andrew.cmu.edu">wuyi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>humanflow_msgs</depend>
  <!-- <depend>cv_bridge</depend> -->
  <depend>std_msgs</depend>


  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-cv-bridge</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

